# todo-apps

./: README.md
todos-api-python/: .env.template  .gitignore  Makefile  docker-compose.yaml  pyproject.toml
todos-api-python/todos/: __init__.py  __main__.py  config.py  error_handlers.py
todos-api-python/todos/auth/blueprints/: auth_blueprint.py
todos-api-python/todos/auth/schemas/: __init__.py  login_request_schema.py
todos-api-python/todos/exceptions/: __init__.py
todos-api-python/todos/todos/blueprints/: __init__.py  todos_blueprint.py
todos-api-python/todos/todos/models/: __init__.py  todo.py  todo_task.py
todos-api-python/todos/todos/schemas/: __init__.py  create_todo_request_schema.py  create_todo_task_request_schema.py  todo_schema.py  todo_task_schema.py
todos-api-python/todos/todos/services/: __init__.py  todos_service.py
